2009-03-31  Nikolaus Schaller <hns@computer.org>
	* fixed correct translation and display of <frameset> and <frame>
	* fixed issue with dangling parent pointer in DOMNodes
	* added a View Hierarchy debug window to SWK Browser

2009-03-21 Riccardo Mottola <rmottola@users.sf.net>
	* Sources/NSXMLParser: change from end pointer to vp.

2008-07-12  Nikolaus Schaller <hns@computer.org>
	* worked on WebPlugin (so that we can integrate e.g. GNASH in some far future; should be stored as "/Library/Internet Plug-Ins/Flash Player.bundle")

2008-05-13  Nikolaus Schaller <hns@computer.org>
	* moved handling fof 'javascript:' URL scheme to WebDataSource
	* worked on windowScriptObject (is the self/window/global object) - new class DOMWindow
	* added macro to omit our private -newlineCharacterSet if we compile for OSX 10.5
	* stringByEvaluatingJavaScriptFromString: fixed to return NSStrings only (even if empty)
	* Javascript Console improved

2008-02-23 18:26-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Correct makefile issue
	* Sources/DOMCore.m: Corrected some compilation warnings.
	* Sources/DOMHTML.m: Minor cleanup.
	* Sources/ECMAScriptEvaluator.m: Corrected some compilation warnings.
	* Sources/GNUmakefile: Correct makefile issue.

2008-02-16  Nikolaus Schaller <hns@computer.org>
	* fixed issue with committing data source too late
	* improved correctness of frameLoadDelegate calls
	* reduced debug NSLog()

2008-02-10 17:31-EST Gregory John Casamento <greg_casamento@yahoo.com>

    NOTE (Nikolaus Schaller <hns@computer.org>): this appears to be a bug in GNUstep-GUI
    NOTE: It has been corrected there, I believe.  (GJC)
	* Sources/WebView.m: Corrected calls to viewWillMove... to include
	calls to the super-class version of it.  Fixes issue observed by
	myself and Riccardo.  Document Window for both SWKBrowser and Vespucci
	was failing to load properly.

2008-02-10 16:01-EST Gregory John Casamento <greg_casamento@yahoo.com>
